--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "angular": "1.3.2",
     "bootstrap": "3.3.1",
-    "angular-route": "1.3.2"
+    "angular-route": "1.3.2",
+    "charte-graphique": "/home/nicolasger/Work/prez/charte-graphique"
   }
 }
