--- a/bower.json
+++ b/bower.json
@@ -22,5 +22,8 @@
     "bootstrap-sass-official": "3.3.1",
     "angular-route": "1.3.2",
     "charte-graphique": "/home/nicolasger/Work/prez/charte-graphique"
+  },
+  "devDependencies": {
+    "angular-mocks": "1.3.2"
   }
 }
