--- a/package.json
+++ b/package.json
@@ -14,8 +14,15 @@
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-karma": "^0.9.0",
     "grunt-usemin": "^2.6.2",
     "grunt-wiredep": "^1.9.0",
+    "jasmine-core": "^2.1.3",
+    "karma": "^0.12.28",
+    "karma-coverage": "^0.2.7",
+    "karma-jasmine": "~0.1.2",
+    "karma-junit-reporter": "^0.2.2",
+    "karma-phantomjs-launcher": "^0.1.4",
     "load-grunt-tasks": "^1.0.0"
   }
 }
